# jupyter-wysiwyg

./: .eslintrc.js  .gitignore  .travis.yml  DEPLOY.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  install.json  jupyter_wysiwyg.json  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config.js
jupyter-wysiwyg/: __init__.py  _version.py
jupyter_wysiwyg/: __init__.py  package.json
jupyter_wysiwyg/static/: index.js  lab.js  nb.js  plugin.js
jupyter_wysiwyg/static/ckeditor/: ckeditor.js  ckeditor.js.map  config.js
jupyter_wysiwyg/static/ckeditor/adapters/: jquery.js
jupyter_wysiwyg/static/ckeditor/translations/: af.js  ar.js  ast.js  az.js  bg.js  ca.js  cs.js  da.js  de-ch.js  de.js  el.js  en-au.js  eo.js  es.js  et.js  eu.js  fa.js  fi.js  fr.js  gl.js  gu.js  he.js  hr.js  hu.js  id.js  it.js  ja.js  km.js  kn.js  ko.js  ku.js  lt.js  lv.js  nb.js  ne.js  nl.js  no.js  oc.js  pl.js  pt-br.js  (+16 more)
src/: editor.ts  factory.ts  index.ts  plugin.ts  version.ts
style/: index.css
test/: test_extension.py
