[build-system]
requires = ["jupyter_packaging~=0.12.0", "jupyterlab~=3.1", "setuptools>=61.2.0", "wheel"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyter-wysiwyg/labextension/static/style.js"]
ensured-targets = ["jupyter-wysiwyg/labextension/static/style.js", "jupyter-wysiwyg/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:all"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyter-wysiwyg/labextension/**", "yarn.lock", ".*", "package-lock.json"]