[build-system]
requires = [
    "hatchling",
    "jupyterlab>=3.4",
]
build-backend = "hatchling.build"

[project]
name = "jupyter-wysiwyg"
description = "WYSIWYG editing functionality for markdown/HTML cells in Jupyter"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name = "Thorin Tabor", email = "tmtabor@cloud.ucsd.edu" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "jupyterlab>=3.4",
]
version = "23.03.0"

[project.license]
file = "LICENSE.txt"

[project.urls]
Homepage = "https://github.com/g2nb/jupyter-wysiwyg"

[tool.hatch.build]
artifacts = [
    "jupyter-wysiwyg/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-wysiwyg/labextension/static" = "share/jupyter/labextensions/@g2nb/jupyter-wysiwyg/static"
"install.json" = "share/jupyter/labextensions/@g2nb/jupyter-wysiwyg/install.json"
"jupyter-wysiwyg/labextension/package.json" = "share/jupyter/labextensions/@g2nb/jupyter-wysiwyg/package.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.2",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter-wysiwyg/labextension/static/style.js",
    "jupyter-wysiwyg/labextension/package.json",
]
skip-if-exists = [
    "jupyter-wysiwyg/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_dir = "jupyter-wysiwyg/labextension"
source_dir = "src"
build_cmd = "install:extension"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:all"
npm = [
    "jlpm",
]

[tool.tbump]
github_url = "https://github.com/g2nb/jupyter-wysiwyg"

[tool.tbump.version]
current = "23.03.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+))?
  (\.
    (?P<dev>dev\d*)
  )?
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
version_template = "version = \"{major}.{minor}.{patch}\""

[[tool.tbump.file]]
src = "package.json"
version_template = "\"version\": \"{major}.{minor}.{patch}\""
